log
Fri 17 Mar 2023 06:41:11 PM UTC: 
 exercises.c | 27 +++++++++++++++++++++++----
 1 file changed, 23 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:59:4: error: ‘p’ is a pointer; did you mean to use ‘->’?
   59 |   p.edad = edad;
      |    ^
      |    ->
exercises.c: In function ‘crearVector’:
exercises.c:81:4: error: ‘v’ is a pointer; did you mean to use ‘->’?
   81 |   v.capacidad = n;
      |    ^
      |    ->
Compilation failed
706471e
Fri 17 Mar 2023 06:41:36 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
098fa34
Sat 18 Mar 2023 03:43:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
8a13950
Sat 18 Mar 2023 03:44:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
db5ed81
Sat 18 Mar 2023 03:46:06 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
8d4ecd6
Sat 18 Mar 2023 03:55:40 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:127:3: error: ‘a’ undeclared (first use in this function)
  127 |   a = crearVector(2);
      |   ^
exercises.c:127:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:128:3: error: ‘b’ undeclared (first use in this function)
  128 |   b = crearVector(2);
      |   ^
exercises.c:135:15: error: passing argument 3 of ‘sumaV’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  135 |   sumaV(&a,&b,&c);
      |               ^~
      |               |
      |               Vector **
exercises.c:111:45: note: expected ‘Vector *’ but argument is of type ‘Vector **’
  111 | void sumaV(Vector * a, Vector * b, Vector * c) {
      |                                    ~~~~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
a85598a
Sat 18 Mar 2023 03:56:23 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:127:14: error: invalid initializer
  127 |   Vector a = crearVector(2);
      |              ^~~~~~~~~~~
exercises.c:128:14: error: invalid initializer
  128 |   Vector b = crearVector(2);
      |              ^~~~~~~~~~~
Compilation failed
955b61a
Sat 18 Mar 2023 03:56:48 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:130:16: error: passing argument 1 of ‘asignarValor’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  130 |   asignarValor(& a, 0, a1);
      |                ^~~
      |                |
      |                Vector **
exercises.c:93:28: note: expected ‘Vector *’ but argument is of type ‘Vector **’
   93 | void asignarValor(Vector * v, int i, int valor) {
      |                   ~~~~~~~~~^
exercises.c:131:16: error: passing argument 1 of ‘asignarValor’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  131 |   asignarValor(& a, 1, a2);
      |                ^~~
      |                |
      |                Vector **
exercises.c:93:28: note: expected ‘Vector *’ but argument is of type ‘Vector **’
   93 | void asignarValor(Vector * v, int i, int valor) {
      |                   ~~~~~~~~~^
exercises.c:132:16: error: passing argument 1 of ‘asignarValor’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  132 |   asignarValor(& b, 0, b1);
      |                ^~~
      |                |
      |                Vector **
exercises.c:93:28: note: expected ‘Vector *’ but argument is of type ‘Vector **’
   93 | void asignarValor(Vector * v, int i, int valor) {
      |                   ~~~~~~~~~^
exercises.c:133:16: error: passing argument 1 of ‘asignarValor’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  133 |   asignarValor(& b, 1, b2);
      |                ^~~
      |                |
      |                Vector **
exercises.c:93:28: note: expected ‘Vector *’ but argument is of type ‘Vector **’
   93 | void asignarValor(Vector * v, int i, int valor) {
      |                   ~~~~~~~~~^
exercises.c:135:9: error: passing argument 1 of ‘sumaV’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  135 |   sumaV(&a,&b,c);
      |         ^~
      |         |
      |         Vector **
exercises.c:111:21: note: expected ‘Vector *’ but argument is of type ‘Vector **’
  111 | void sumaV(Vector * a, Vector * b, Vector * c) {
      |            ~~~~~~~~~^
exercises.c:135:12: error: passing argument 2 of ‘sumaV’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  135 |   sumaV(&a,&b,c);
      |            ^~
      |            |
      |            Vector **
exercises.c:111:33: note: expected ‘Vector *’ but argument is of type ‘Vector **’
  111 | void sumaV(Vector * a, Vector * b, Vector * c) {
      |                        ~~~~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
0eea2aa
Sat 18 Mar 2023 03:57:05 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  8|0
total_score: 70/70
2497fc1
